--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
     <p id="verbRes"></p>
     <p id="nounRes"></p>
 
-    <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
